custom JRE build with jlink to further reduce size